--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,8 @@ buildscript {
 
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://maven.google.com' }
+        maven { url 'http://s3.amazonaws.com/fabric-artifacts/public' }
         google()
-//        jcenter()
-//        google()
     }
 
     dependencies {
@@ -55,11 +52,9 @@ buildscript {
 allprojects {
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-//        google()
-//        jcenter()
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://maven.google.com' }
+        maven { url 'http://s3.amazonaws.com/fabric-artifacts/public' }
+        google()
         maven {
             name 'glide-snapshot'
             url 'http://oss.sonatype.org/content/repositories/snapshots'
