--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ buildscript {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven { url 'http://s3.amazonaws.com/fabric-artifacts/public' }
         google()
+        jcenter()
     }
 
     dependencies {
@@ -55,6 +56,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'http://s3.amazonaws.com/fabric-artifacts/public' }
         google()
+        jcenter()
         maven {
             name 'glide-snapshot'
             url 'http://oss.sonatype.org/content/repositories/snapshots'
